--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3,6 +3,14 @@ body{
   background-color: #e7e7e7;
 }
 
+.topbar {
+  background: url('.../assets/imgs/back.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .card{
     background-color: white;
 }
